name:                hashtable
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cocreature/hashtable#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           (C) 2018 Moritz Kiefer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.HashTable
  build-depends:       base >= 4.7 && < 5
                     , primitive
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cocreature/hashtable
