name:                robinhood
version:             0.1.0.0
synopsis:            Robin Hood hashtable
-- description:
homepage:            https://github.com/cocreature/robinhood#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           (C) 2018 Moritz Kiefer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.2

library
  hs-source-dirs:      src
  exposed-modules:     Data.HashTable.RobinHood
  build-depends:       base >= 4.11 && < 5
                     , hashable
                     , primitive
                     , prim-ref
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  BangPatterns
                       GeneralizedNewtypeDeriving
                       MultiWayIf

test-suite hedgehog
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             hedgehog.hs
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , hedgehog
                     , robinhood

executable bench-hashtables
  hs-source-dirs:      bench
  main-is:             hashtables.hs
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , hashable
                     , hashtables

executable bench-hashtable
  hs-source-dirs:      bench
  main-is:             hashtable.hs
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , hashable
                     , robinhood

source-repository head
  type:     git
  location: https://github.com/cocreature/hashtable
