name:                robinhood
version:             0.1.0.0
synopsis:            Robin Hood hashtable
description:         Haskell implementation of a linearly probed hash table
                     using Robin Hood hashing.
homepage:            https://github.com/cocreature/robinhood#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           (C) 2018 Moritz Kiefer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.3

library
  hs-source-dirs:      src
  exposed-modules:     Data.HashTable.RobinHood.Unboxed
                       Data.HashTable.RobinHood.Internal
  build-depends:       base >= 4.11 && < 5
                     , contiguous
                     , hashable
                     , primitive >= 0.6.4
                     , prim-ref
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  default-extensions:  BangPatterns
                       GeneralizedNewtypeDeriving
                       MultiWayIf

test-suite hedgehog
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             hedgehog.hs
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , hedgehog
                     , robinhood
  ghc-options:         -Wall -O2

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , criterion
                     , deepseq
                     , hashable
                     , hashtables
                     , primitive
                     , robinhood
                     , vector
                     , vector-hashtables
  ghc-options:         -Wall -O2

executable benchgraph
  hs-source-dirs:   benchgraph
  main-is:          benchgraph.hs
  default-language: Haskell2010
  build-depends:    base
                  , Chart
                  , Chart-cairo
                  , containers
                  , criterion
                  , split
                  , statistics

source-repository head
  type:     git
  location: https://github.com/cocreature/hashtable
